# kalypso

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: api.md  curl.md  getting-started.md  security.md
examples/docker-compose/: docker-compose.yml  nginx.conf
examples/docker-compose-auto-refresh/: docker-compose.yml  nginx.conf
examples/magic/: docker-compose.yml  nginx.conf
examples/magic-inject/kalypso/: docker-compose.yml
examples/magic-inject/webapp/: docker-compose.yml  nginx.conf
examples/shared-ca/: README.md  docker-compose.yml
examples/shared-ca/backend/: docker-compose.yml  nginx.conf
examples/shared-ca/frontend/: docker-compose.yml  nginx.conf
examples/standalone/: docker-compose.yml
sdks/go/: go.mod
sdks/go/kalypso/: client.go
sdks/python/: pyproject.toml
sdks/python/kalypso_sdk/: __init__.py
sdks/ruby/: kalypso.gemspec
sdks/ruby/lib/: kalypso.rb
site/: index.html
site/docs/: api.html  curl.html  docker.html  getting-started.html  security.html  style.css
src/kalypso/: __init__.py  ca.py  cli.py  docker_watcher.py  image_profiles.py  injector.py  mkcert.py  server.py  sidecar.py  trust.py
tests/: test_ca.py  test_cli.py  test_docker_watcher.py  test_image_profiles.py  test_import_ca.py  test_injector.py  test_mkcert.py  test_server.py  test_sidecar.py  test_trust.py
