[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalypso"
version = "0.1.0"
description = "Local dev SSL certificate authority — like Let's Encrypt for localhost"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Kalypso Contributors" }]
keywords = ["ssl", "tls", "ca", "certificate", "development", "localhost", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "cryptography>=42.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
kalypso = "kalypso.cli:main"

[project.urls]
Homepage = "https://kalypso.dev"
Documentation = "https://kalypso.dev/docs"
Repository = "https://github.com/kalypso-dev/kalypso"

[tool.hatch.build.targets.wheel]
packages = ["src/kalypso"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]  # Allow assert in tests
